--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:web-vitals": "npm run dev",
+    "test:build": "npm run build && npm run start"
   },
   "dependencies": {
     "@google/model-viewer": "^4.1.0",
